--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -1,7 +1,78 @@
 {% extends 'layout.html' %}
 
+
+
+{% block bonus %}
+<div class="dark_bg">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6  d-flex align-items-center">
+                <div>
+                    <p class="bonus_title">Bonus for friend</p>
+                    <p class="bonus_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                Mauris pulvinar molestie in adipiscing purus congue egestas iaculis nisi. 
+                                Habitasse tempor aliquam mattis volutpat gravida eget nisi, sit. 
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                Mauris pulvinar molestie in adipiscing purus congue egestas iaculis nisi. 
+                                Habitasse tempor aliquam mattis volutpat gravida eget nisi, sit.</p>
+                    <a href="">
+                        <div class="bonus_button">
+                            <p>Read More</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-6  d-flex align-items-center">
+                <img src="/static/images/macbook.png" alt="" class="bonus_macbook">
+            </div>
+        </div>
+    </div>
+</div>
+
+
+{% endblock %}
+
+{% block about %}
+<div class="about_bg">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 d-flex">
+                <p>DETIALS ABOUT REALTIMEINC</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="bonus_he"></div>
+{% endblock %}
+
+{% block ContuctUs %}
+
+<div class="contactUs">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 d-flex justify-content-center">
+                <p class="already_loved">Aldeady Loved Us? let`s talk!</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 d-flex justify-content-center">  
+                <a href="">
+                    <div class="button_contactUs">
+                        <p>Contact Us</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+{% endblock %}
+
+
+
 {% block footer %}
-<div class="bottom">
+<div class="dark_bg">
     <div class="container">
         <div class="row">
             <div class="col-md-4">
@@ -9,14 +80,15 @@
                     <img src="/static/images/real_logo.png" alt="" class="logo">
                     <p class="name_company">RealTimeInc</p>
                 </div>
-                <div class="d-flex justify-content-between" style="margin-left: 10px;">
+                <div class="d-flex justify-content-between" >
                     <a href="" class="bottom_menu">Main</a>
                     <a href="" class="bottom_menu">About</a>
                     <a href="" class="bottom_menu">Courses</a>
                     <a href="" class="bottom_menu">Maps</a>
                 </div>
             </div>
-            <div class="col-md-8">
+            <div class="col-md"></div>
+            <div class="col-md-7">
                 <div class="subscribe">
                     <p>Subscribe to find out the news light bulb as soon as possible</p>
                 </div>
