--- a/index/templates/layout.html
+++ b/index/templates/layout.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,9 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RealTimeInc</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/css/layout.css">
+    <link rel="stylesheet" href="{% static 'css/layout.css' %}">
 </head>
 <body>
+    <!-- main -->
+    {% block main %}
+    {% endblock %}
+    <!-- end main -->
+
+
     <!-- bonus for friend -->
     {% block bonus %}
     {% endblock %}
@@ -19,6 +26,10 @@
     {% endblock %}
     <!-- end about company -->
 
+    <!-- carusel -->
+    {% block carousel %}
+    {% endblock %}
+    <!-- end carusel -->
 
     <!-- contact us -->
     {% block ContuctUs %}
