--- a/index/static/css/layout.css
+++ b/index/static/css/layout.css
@@ -70,7 +70,139 @@ body, p, a, h1{
     background-size: cover;
     background-position: center;
 }
+.about_title{
+    margin-top: 120px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 42px;
+    letter-spacing: 0.08em;
+
+    color: #232323;
+}
+.main_qualities{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: center;
+    letter-spacing: 0.08em;
+
+    color: #494949;
+
+    margin-bottom: 50px;
+}
+.about_img{
+    height: 75px;
+}
+.about_more_desc{
+    margin-top: 100px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
+
+    color: #232323;
+}
+.about_creative{
+    margin-left: 50px;
+    margin-top: 35px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 42px;
+
+    color: #232323;
+}
+.about_creative_desc{
+    margin-top: 25px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
+
+    color: #000000;
+}
 /* end about */
+
+/* corusel */
+.corusel_bg{
+    background-color: #232323;
+    
+}
+.title_corusel{
+    margin-top: 100px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.08em;
+
+    color: #BAA9A0;
+    margin-bottom: 60px;
+}
+.element_corusel{
+    height: 500px;
+    width: 350px;
+    background-color: #E1E1E1;
+    margin-top: 20px;
+    
+}
+.carusel_bottom{
+    height: 80px;
+}
+
+.element_corusel_photo{
+    width: 350px;
+    height: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.element_corusel_photo_photo{
+    width: 290px;
+    height: 290px;
+}
+.element_corusel_desc{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: center;
+
+    color: #8D7D73;
+}
+.element_corusel_button{
+    margin-top: 30px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.element_corusel_button_button{
+    height: 50px;
+    width: 200px;
+
+    border-radius: 100px;
+    border: 2px solid #7F6759;
+    color: #7F6759;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+/* end corusel */
 
 /* contact us */
 .contactUs{
